Add vandelay_migration agent and improve E2E setup documentation
New Features:
- Add vandelay_migration agent for VCS to Vandelay Cloud migrations
- Add MCP server for service requests (firewall, DNS, certificates, SSO)
- Add migration data ingestion (graph + vector) with CSV and documents

Documentation:
- Add parallel Quick Start sections for both agents in main README
- Fix broken run_ingestion references with actual commands
- Add clear data cleanup instructions with --clear flag
- Use placeholders instead of hardcoded credentials

Agent Improvements:
- Update orchestrator to synthesize outputs from multiple sub-agents
- Enhance vector search with hybrid search support

--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,9 @@ env/
 secrets.yaml
 *-secrets.yaml
 
-# Local stack with secrets (use template instead)
+# Local stack with secrets (use templates instead)
 openshift/local-stack.yaml
+openshift/*-local-stack.yaml
 
 # ADK local data
 .adk/
