--- a/openshift/vandelay-search/env.template
+++ b/openshift/vandelay-search/env.template
@@ -23,6 +23,9 @@ LLAMASTACK_BASE_URL=https://your-llamastack-endpoint
 VECTOR_STORE_ID=your-vector-store-id
 VECTOR_STORE_VERIFY_SSL=false
 
+# Migration-specific Vector Store (for vandelay_migration)
+MIGRATION_VECTOR_STORE_ID=migration_docs_store
+
 # Optional: Google AI (if using Vertex AI or Gemini directly)
 # GOOGLE_GENAI_USE_VERTEXAI=false
 # GOOGLE_API_KEY=your-google-api-key
